--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   font_awesome_flutter: ^8.5.0
   http: ^0.12.0+2
+  shared_preferences: ^0.5.3+4
 
 dev_dependencies:
   flutter_test:
