--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^0.12.0+2
   flutter_svg: ^0.13.1
   shared_preferences: ^0.5.3+4
+  circular_profile_avatar: ^0.2.0
 
 dev_dependencies:
   flutter_test:
